--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ env:
   - NODE_ENV=test
 services:
   - mongodb
-# deploy:
-#   provider: heroku
-#   api_key:
-#     secure: [YOUR-API-KEY]
-#   app: [YOUR-APP-NAME]
-#   on:
-#     repo: [YOUR-APP-REPO]
+deploy:
+  provider: heroku
+  # api_key:
+  #   secure: [YOUR-API-KEY]
+  app: briandudey-noteful
+  on:
+    repo: briandudey/BrianDudey_Noteful_V3
